# Fractals_A-P

./: .gitignore  CMakeLists.txt  README.md  README_ru.md  README_user.txt  dev_guide.md  settings.json
src/core/: Fractal.h  HFractal.cpp  HFractal.h  HilbertFractal.cpp  HilbertFractal.h  KochFractal.cpp  KochFractal.h  LevyFractal.cpp  LevyFractal.h  SierpinskiCarpet.cpp  SierpinskiCarpet.h  SpiralFractal.cpp  SpiralFractal.h  TreeFractal.cpp  TreeFractal.h  VicsekFractal.cpp  VicsekFractal.h
src/gui/: MainWindow.cpp  MainWindow.h  SettingsWindow.cpp  SettingsWindow.h  VisualizerWindow.cpp  VisualizerWindow.h
src/widgets/: FractalGLWidget.cpp  FractalGLWidget.h
